# daniel-chess

./: .gitignore  CMakeLists.txt
include/: position.h  pst.hpp  tables.h  types.h
src/: main.cpp  types.cpp
